tests/ui/eii/static/mismatch_mut.stderr
error: `#[eii]` cannot be used on mutable statics
  --> $DIR/mismatch_mut.rs:7:1
   |
LL | #[eii(hello)]
   | ^^^^^^^^^^^^^

error: mutability does not match with the definition of`#[hello]`
  --> $DIR/mismatch_mut.rs:11:1
   |
LL | #[hello]
   | ^^^^^^^^

error: aborting due to 2 previous errors

